src/test/ui/traits/cycle-cache-err-60010.stderr
error[E0277]: the trait bound `RootDatabase: SourceDatabase` is not satisfied
  --> $DIR/cycle-cache-err-60010.rs:27:13
   |
LL |     _parse: <ParseQuery as Query<RootDatabase>>::Data,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SourceDatabase` is not implemented for `RootDatabase`
   |
   = help: the trait `Query<DB>` is implemented for `ParseQuery`
note: required because of the requirements on the impl of `Query<RootDatabase>` for `ParseQuery`
  --> $DIR/cycle-cache-err-60010.rs:37:10
   |
LL | impl<DB> Query<DB> for ParseQuery
   |          ^^^^^^^^^     ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
